--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ coverage/
 # nyc test coverage
 .nyc_output/
 
+# Oracle JDK binaries (too large for GitHub)
+dp/oracleJdk-24/
+
 # Dependency directories
 jspm_packages/
 
