--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,187 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-.Python
+*$py.class
+
+# C extensions
 *.so
-.venv/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
 venv/
 ENV/
-.env
-.env.local
-.env.*
+env.bak/
+venv.bak/
 
-# Node
-node_modules/
-.pnpm-debug.log*
-npm-debug.log*
+# Spyder project settings
+.spyderproject
+.spyproject
 
-# IDE
-.vscode/
-.idea/
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
+.python_packages
+
+# FC runtime / audit artifacts (do not commit)
+**/outputs/
+**/logs/
+**/exports/
+**/data/
+**/tmp/
+**/.cache/
+**/__pycache__/
+**/*.pyc
+**/.pytest_cache/
+**/.venv/
+**/venv/
+
+# Evidence attachments
+**/attachments/
+**/sent_eml/
+**/filled_*/
+**/*.eml
+**/*.msg
+
+# Databases and dumps
+**/*.db
+**/*.sqlite
+**/*.sqlite3
+
+# Audit bundles / large files
+**/*.zip
+**/*.7z
+
+# Secrets / env
+**/.env
+**/.env.*
+**/*secrets*
+**/*token*
+
+# Node / frontend
+**/node_modules/
+**/dist/
+**/build/
+**/.next/
+**/.turbo/
+**/.vite/
+
+# IDE / editors
+**/.vscode/
+**/.idea/
+**/.cursor/
 *.swp
 *.swo
 .cursorignore
 .cursorindexingignore
-*.code-workspace
-
-# Build / Dist
-build/
-dist/
-*.egg-info/
-
-# Logs e Temporários
-logs/
-outputs/
-temp/
-*.log
-*.tmp
-*.bak
-*.backup
-_archive/
-_archives/
-
-# Dados e Arquivos Grandes
-*.zip
-*.rar
-*.7z
-*.tar.gz
-*.sqlite
-*.db
-*.csv
-*.xlsx
-*.xls
-*.json
-*.txt
-*.md
-!README.md
-!docs/**/*.md
-!fc_core/data/reference/clientes.json
-
-# Pastas de Lixo Específicas Detectadas
-backups/
-apps/dev/extracted_*
-projeto_instagram_congelado/
-_outros_scripts/
-extracted_data/
-pastes/
-temp_*/
-sigejup-extracted/
-legacy_workspaces/
-
-# Docker
-docker/*/data/
