--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          if [ -f "pyproject.toml" ] || [ -f "setup.py" ]; then
+            pip install -e ".[dev]"
+          elif [ -f "requirements.txt" ]; then
+            pip install -r requirements.txt
+            pip install pytest
+          else
+            echo "ERROR: no Python dependency manifest found (pyproject.toml/setup.py/requirements.txt)."
+            exit 1
+          fi
 
       - name: Run pytest
         run: pytest tests/ --maxfail=1 --disable-warnings
@@ -73,25 +81,60 @@ jobs:
     name: ui-react-tests
     runs-on: ubuntu-latest
     needs: guardrails
-    defaults:
-      run:
-        working-directory: apps/ui-react
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Detect UI React workspace
+        id: detect_ui
+        shell: bash
+        run: |
+          if [ -d "apps/ui-react" ] && [ -f "apps/ui-react/package.json" ]; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+            if [ -f "apps/ui-react/package-lock.json" ]; then
+              echo "has_lock=true" >> "$GITHUB_OUTPUT"
+            else
+              echo "has_lock=false" >> "$GITHUB_OUTPUT"
+            fi
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "has_lock=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Setup Node (cached)
+        if: steps.detect_ui.outputs.exists == 'true' && steps.detect_ui.outputs.has_lock == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: npm
           cache-dependency-path: apps/ui-react/package-lock.json
 
+      - name: Setup Node
+        if: steps.detect_ui.outputs.exists == 'true' && steps.detect_ui.outputs.has_lock != 'true'
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+
       - name: Install dependencies
-        run: npm ci
+        if: steps.detect_ui.outputs.exists == 'true'
+        working-directory: apps/ui-react
+        run: |
+          if [ "${{ steps.detect_ui.outputs.has_lock }}" = "true" ]; then
+            npm ci
+          else
+            npm install --no-audit --no-fund
+          fi
 
       - name: Run tests
+        if: steps.detect_ui.outputs.exists == 'true'
+        working-directory: apps/ui-react
         run: npm run test -- --run
 
       - name: Build
+        if: steps.detect_ui.outputs.exists == 'true'
+        working-directory: apps/ui-react
         run: npm run build
+
+      - name: Skip message
+        if: steps.detect_ui.outputs.exists != 'true'
+        run: echo "apps/ui-react not found in this revision; ui-react-tests skipped."
