feat(aggregatto): automacao outlook + consolidacao de relatorios

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,12 @@ __azurite_db*__.json
 *.swo
 .cursorignore
 .cursorindexingignore
+
+# Aggregatto - dados/saidas
+espaider_anexos/
+downloads/
+outputs/
+logs/
+*.xlsx
+*.csv
+
