--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+﻿# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -85,7 +85,7 @@ ipython_config.py
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
+#   having no cross-platform support, pipenv may install dependencies that donâ€™t work, or not
 #   install all needed dependencies.
 #Pipfile.lock
 
@@ -185,3 +185,8 @@ __azurite_db*__.json
 *.swo
 .cursorignore
 .cursorindexingignore
+
+# Keep circularizacao schema/templates versioned
+!fc_circularizacao/data/
+!fc_circularizacao/data/schema.sql
+!fc_circularizacao/data/recipients.csv.example
