--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,80 +1,100 @@
-name: FusionCore CI
+﻿name: FusionCore CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   guardrails:
-    name: Guardrails (no self-hosted / no large)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Fail on forbidden runners
-      shell: bash
-      run: |
-        set -euo pipefail
-        echo "Scanning workflows for forbidden runners..."
-        if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*self-hosted" .github/workflows; then
-          echo "ERROR: self-hosted runner requested in workflow."
-          exit 1
-        fi
-        if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*-xlarge" .github/workflows; then
-          echo "ERROR: xlarge runner requested in workflow."
-          exit 1
-        fi
-        if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*-large" .github/workflows; then
-          echo "ERROR: large runner requested in workflow."
-          exit 1
-        fi
-        echo "OK: no forbidden runners found."
+      - uses: actions/checkout@v4
 
-  test:
+      - name: Fail on forbidden runners
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "Scanning workflows for forbidden runners..."
+          if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*self-hosted" .github/workflows; then
+            echo "ERROR: self-hosted runner requested in workflow."
+            exit 1
+          fi
+          if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*-xlarge" .github/workflows; then
+            echo "ERROR: xlarge runner requested in workflow."
+            exit 1
+          fi
+          if grep -REn --line-number "^[[:space:]]*runs-on:[[:space:]]*.*-large" .github/workflows; then
+            echo "ERROR: large runner requested in workflow."
+            exit 1
+          fi
+          echo "OK: no forbidden runners found."
+
+  python-tests:
     runs-on: ubuntu-latest
     needs: guardrails
-    
-    services:
-      # Serviço Redis para testes que dependem dele (Celery)
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-        cache: 'pip'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-        pip install pytest-cov
-        
-    - name: Run Tests
-      env:
-        DATABASE_URL: sqlite:///./test.db
-        REDIS_URL: redis://localhost:6379/0
-        SECRET_KEY: test_secret_key
-      run: |
-        pytest tests/ --cov=fc_core --cov-report=xml
+      - uses: actions/checkout@v4
 
-    - name: Repo Guard
-      run: |
-        python scripts/repo_guard.py --fail-on-new
-        
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        fail_ci_if_error: false
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Installer precheck
+        run: python scripts/precheck_installers.py
+
+      - name: Python syntax smoke
+        run: |
+          python -m py_compile scripts/map_automations.py
+          python -m py_compile scripts/run_fiscal_normalization.py
+          python -m py_compile scripts/precheck_installers.py
+          python -m py_compile fc_circularizacao/src/init_db.py
+          python -m py_compile fc_circularizacao/src/ingest_eml.py
+          python -m py_compile fc_circularizacao/src/report_status.py
+
+      - name: Circularizacao schema smoke
+        run: test -f fc_circularizacao/data/schema.sql
+
+  ui-react-tests:
+    runs-on: ubuntu-latest
+    needs: guardrails
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Run ui-react tests when app exists
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ ! -f "apps/ui-react/package.json" ]; then
+            echo "No apps/ui-react package.json found. Skipping UI tests."
+            exit 0
+          fi
+          cd apps/ui-react
+          if [ -f "pnpm-lock.yaml" ]; then
+            corepack enable
+            pnpm install --frozen-lockfile
+            pnpm test --if-present
+          elif [ -f "package-lock.json" ]; then
+            npm ci
+            npm test --if-present
+          elif [ -f "yarn.lock" ]; then
+            corepack enable
+            yarn install --frozen-lockfile
+            yarn test --if-present
+          else
+            npm install
+            npm test --if-present
+          fi
