chore(security): remove supabase secrets and add gitleaks guardrails

--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,8 @@ __azurite_db*__.json
 **/.env.*
 **/*secrets*
 **/*token*
+!.env.exemplo
+!apps/APP/.env.exemplo
 
 # Node / frontend
 **/node_modules/
