--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,46 +17,62 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    outputs:
+      has_dotnet: ${{ steps.detect.outputs.has_dotnet }}
     
     steps:
     - uses: actions/checkout@v4
+
+    - name: Detect .NET projects
+      id: detect
+      shell: bash
+      run: |
+        set -euo pipefail
+        if git ls-files '*.sln' '*.csproj' '*.fsproj' | grep -q .; then
+          echo "has_dotnet=true" >> "$GITHUB_OUTPUT"
+        else
+          echo "has_dotnet=false" >> "$GITHUB_OUTPUT"
+        fi
     
     - name: Setup .NET
+      if: steps.detect.outputs.has_dotnet == 'true'
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         cache: true
-        cache-dependency-path: |
-          **/*.sln
-          **/*.csproj
-          **/*.fsproj
-          **/*.props
-          **/packages.lock.json
+
+    - name: Skip build/test when no .NET project is present
+      if: steps.detect.outputs.has_dotnet != 'true'
+      run: echo "No .NET project files found. Skipping .NET build/test workflow."
     
     - name: Restore dependencies
+      if: steps.detect.outputs.has_dotnet == 'true'
       run: dotnet restore
     
     - name: Build
+      if: steps.detect.outputs.has_dotnet == 'true'
       run: dotnet build --no-restore --configuration Release
     
     - name: Test
+      if: steps.detect.outputs.has_dotnet == 'true'
       run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
     
     - name: Security Scan
+      if: steps.detect.outputs.has_dotnet == 'true'
       run: |
         dotnet list package --vulnerable --include-transitive
         dotnet list package --outdated
     
     - name: Upload test results
+      if: always() && steps.detect.outputs.has_dotnet == 'true'
       uses: actions/upload-artifact@v4
-      if: always()
       with:
         name: test-results
         path: '**/TestResults/**'
     
     - name: Upload coverage reports
+      if: always() && steps.detect.outputs.has_dotnet == 'true'
       uses: codecov/codecov-action@v3
-      if: always()
       with:
         file: '**/coverage.cobertura.xml'
         flags: unittests
@@ -65,7 +81,7 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && needs.build.outputs.has_dotnet == 'true'
     timeout-minutes: 20
     
     steps:
