--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,37 @@ on:
     branches: [ main, develop ]
 
 jobs:
+  guardrails:
+    name: Guardrails (no self-hosted / no large)
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Fail on forbidden runners
+      shell: bash
+      run: |
+        set -euo pipefail
+        echo "Scanning workflows for forbidden runners..."
+        if grep -RIn --line-number "^[[:space:]]*runs-on:.*self-hosted" .github/workflows; then
+          echo "ERROR: self-hosted runner requested in workflow."
+          exit 1
+        fi
+        if grep -RIn --line-number "^[[:space:]]*runs-on:.*\\[.*self-hosted" .github/workflows; then
+          echo "ERROR: self-hosted runner requested in workflow (array)."
+          exit 1
+        fi
+        if grep -RIn --line-number "^[[:space:]]*runs-on:.*-large" .github/workflows; then
+          echo "ERROR: large runner requested in workflow."
+          exit 1
+        fi
+        if grep -RIn --line-number "^[[:space:]]*runs-on:.*-xlarge" .github/workflows; then
+          echo "ERROR: xlarge runner requested in workflow."
+          exit 1
+        fi
+        echo "OK: no forbidden runners found."
+
   test:
     runs-on: ubuntu-latest
+    needs: guardrails
     
     services:
       # Serviço Redis para testes que dependem dele (Celery)
@@ -23,7 +52,7 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
@@ -34,7 +63,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        if [ -f "pyproject.toml" ]; then
+          pip install -e ".[dev]"
+        elif [ -f "requirements.txt" ]; then
+          pip install -r requirements.txt
+        else
+          echo "No pyproject.toml or requirements.txt found. Skipping project dependency install."
+        fi
         pip install pytest-cov
         
     - name: Run Tests
@@ -43,7 +78,15 @@ jobs:
         REDIS_URL: redis://localhost:6379/0
         SECRET_KEY: test_secret_key
       run: |
-        pytest tests/ --cov=fc_core --cov-report=xml
+        if [ -d "tests" ]; then
+          pytest tests/ --cov=fc_core --cov-report=xml
+        else
+          echo "No tests directory found. Skipping pytest."
+        fi
+
+    - name: Repo Guard
+      run: |
+        python scripts/repo_guard.py --fail-on-new
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
