--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Pip dependency integrity
+        run: pip check
+
       - name: Installer precheck
         run: python scripts/precheck_installers.py
 
@@ -62,6 +65,95 @@ jobs:
 
       - name: Circularizacao schema smoke
         run: test -f fc_circularizacao/data/schema.sql
+
+  api-bootstrap-smoke-linux:
+    runs-on: ubuntu-latest
+    needs: guardrails
+    env:
+      DATABASE_URL: sqlite:///./test.db
+      REDIS_URL: redis://localhost:6379/0
+      SECRET_KEY: test_secret_key
+      ENABLE_OCR_IA: "false"
+      LLM_GATEWAY_ENABLED: "true"
+      LLM_GATEWAY_MOCK_MODE: "true"
+      LLM_REQUIRE_TRUSTED_IDENTITY: "false"
+      LLM_ALLOW_BODY_IDENTITY_FALLBACK: "true"
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip check
+
+      - name: Apply SQL migrations
+        run: python scripts/apply_db_migrations.py
+
+      - name: API smoke (/health, /openapi, /llm/chat)
+        shell: bash
+        run: |
+          set -euo pipefail
+          python -m uvicorn fc_core.api.main:app --host 127.0.0.1 --port 8000 >/tmp/uvicorn.log 2>&1 &
+          UVICORN_PID=$!
+          trap 'kill $UVICORN_PID || true' EXIT
+
+          for i in {1..30}; do
+            if curl -fsS http://127.0.0.1:8000/health >/dev/null; then
+              break
+            fi
+            sleep 1
+          done
+
+          curl -fsS http://127.0.0.1:8000/health
+          curl -fsS http://127.0.0.1:8000/openapi.json >/dev/null
+
+          cat > /tmp/llm_payload.json <<'JSON'
+          {
+            "prompt": "smoke test",
+            "user_id": "ci-user",
+            "team_id": "ci-team",
+            "metadata": {"source": "ci-smoke"}
+          }
+          JSON
+          curl -fsS -X POST http://127.0.0.1:8000/llm/chat \
+            -H "Content-Type: application/json" \
+            --data @/tmp/llm_payload.json >/dev/null
+
+  dependency-install-smoke-windows:
+    runs-on: windows-latest
+    needs: guardrails
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: Install dependencies and verify imports
+        shell: pwsh
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip check
+          @'
+          import fastapi
+          import uvicorn
+          import PIL
+          import pydantic_settings
+          import celery
+          import reportlab
+          import aiofiles
+          print("import smoke ok")
+          '@ | python -
 
   ui-react-tests:
     runs-on: ubuntu-latest
